# IngressKit

./: .dockerignore  .gitignore  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINER_SETUP.md  README.md  README_NEW.md  docker-compose.yml
.github/: DISCUSSIONS_WELCOME.md  FUNDING.yml  SPONSORS.md
.github/DISCUSSION_TEMPLATE/: data_challenge.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  schema_request.yml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  DEPLOYMENT_GUIDE.md  EXAMPLES_AND_USE_CASES.md  PROJECT_OVERVIEW.md  QUICK_API_REFERENCE.md  README.md  SDK_REFERENCE.md  SERVER_API_REFERENCE.md
examples/: contacts_clean.csv  contacts_messy.csv  products_clean.csv  products_messy.csv  products_with_units.csv  products_with_units_clean.csv  transactions_clean.csv  transactions_messy.csv
scripts/: build.sh
sdk/python/: pyproject.toml  requirements.txt
sdk/python/ingresskit/: __init__.py  cli.py  repair.py  units.py
server/: .env  .env.bak  Dockerfile  main.py  main_oss.py  main_saas_backup.py  pyproject.toml  requirements.txt  requirements_oss.txt  requirements_saas_backup.txt  run_local.sh
server/deploy/: install_systemd.sh  update.sh  verify.sh
server/fixtures/: github_issue_opened.json  slack_message.json  stripe_charge_succeeded.json
server/static/: index.html  index_saas_backup.html  privacy.html  terms.html
server/tests/: test_ping.py  test_webhooks.http  test_webhooks.py
